ocp-CRs/pgadmin/pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: bamoe-ns
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  type: NodePort
  ports:
    - nodePort: 30200
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: bamoe-ns
spec:
  selector:
   matchLabels:
    app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin4
          image: 'dpage/pgadmin4:latest'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: pgadminport
          volumeMounts:
            - name: pgadmin-config
              mountPath: /pgadmin4/myconfig
            - name: pgadmin-passwd
              mountPath: /pgadmin4/mypasswords
      volumes:
        - name: pgadmin-config
          configMap:
            name: pgadmin-config       
        - name: pgadmin-passwd
          configMap:
            name: pgadmin-passwd
